--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,3 +23,6 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 CONFIG_ZMK_POINTING=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
