--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,3 +26,5 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
